// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageWidget renders an empty image view widget component 1`] = `null`;

exports[`ImageWidget renders an image view widget component 1`] = `
<span
  className="metadata image widget"
>
  <img
    alt=""
    data-content-type=""
    data-size={0}
    data-size-fmt="0B"
    src="/foo-bar.png"
  />
</span>
`;

exports[`ImageWidget renders an image view widget component with children 1`] = `
<span
  className="metadata image widget"
>
  <img
    alt="foo-bar.png"
    data-content-type=""
    data-size={0}
    data-size-fmt="0B"
    src="/foo-bar.png"
  />
</span>
`;
